--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="col-md-3 col-xs-3"></div>
           <div class="col-md-6 col-xs-6">
             <h1>Vijay Raghavan</h1>
-            <h4 id="oneliner"> Student | Developer  |  Tech Enthusiast  |  Quizzer</h4>
+           <!-- <h4 id="oneliner"> Student | Developer  |  Tech Enthusiast  |  Quizzer</h4> -->
           </div>
           <div class="col-md-3 col-xs-3"></div>
         </div>
