--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <div class="col-md-6 col-xs-6">
             <h1>Vijay Raghavan</h1>
            <!-- <h4 id="oneliner"> Student | Developer  |  Tech Enthusiast  |  Quizzer</h4> -->
+           <h4 id="oneliner"> Computer engineering student at IIITDM </h4>
+           <h5> I love programming contests and quizzing</h5>
           </div>
           <div class="col-md-3 col-xs-3"></div>
         </div>
