--- a/index.html
+++ b/index.html
@@ -1,66 +1,84 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
-    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-    <script>
-      (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-          (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-          m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-      ga('create', 'UA-72232790-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
+<head>
     <title>Vijay Raghavan</title>
-  </head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Vijay Raghavan : Vijay Raghavan&#39;s personal website">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <meta property="og:title" content="Vijay Raghavan - Personal Website" />
+    <meta property="og:type" content="website" />
+    <style>
+        .embed-container {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            max-width: 100%;
+        }
+        
+        .embed-container iframe,
+        .embed-container object,
+        .embed-container embed {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
 
-  <body>
-    <div class="container-fluid">
-      <section class="top">
-        <div class="wrapper row home">
-          <div class="col-md-3 col-xs-3"></div>
-          <div class="col-md-6 col-xs-6">
-            <h1>Vijay Raghavan</h1>
-           <!-- <h4 id="oneliner"> Student | Developer  |  Tech Enthusiast  |  Quizzer</h4> -->
-           <h4 id="oneliner"> Computer engineering student at IIITDM </h4>
-           <h5> I love programming contests and quizzing</h5>
-          </div>
-          <div class="col-md-3 col-xs-3"></div>
-        </div>
-      </section>
-      <section class="icons">
-        <div class="wrapper">
-          <div id="icon_block" class="row">
-            <div class="col-md-3 col-xs-3"></div>
-            <div class="col-md-6 col-xs-6 social-media-list">
+    </style>
+</head>
 
-              <a class="fa fa-envelope-o" target="_blank" href="mailto:vijaysgr8@gmail.com"></a>
+<body id="top">
+
+    <!-- Header -->
+    <header id="header">
+        <h1><strong>Vijay Raghavan</strong></h1>
+        <h1>Computer Engineering student</h1>
+        <h1>IIITDM, Kancheepuram</h1>
+        <br />
+        <br />
+    </header>
+<img style="display:none;" src="images/test.jpg">
+
+    <!-- Footer -->
+    <footer id="footer">
+        <nav>
+            <ul class="icons" align="center">
+
+                <li><a href="https://github.com/daj0ker" class="icon fa-github-square"><span class="label">GitHub</span></a></li>
+                <li><a href="https://in.linkedin.com/in/vijay97" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+                <li><a href="mailto:me@vijayraghavan.net" class="icon fa-envelope-square"><span class="label">Email</span></a></li>
+            </ul>
+        </nav>
+    </footer>
+
+    <!-- Main -->
+
+    <div id="main">
+
+        <!-- One -->
+        <section id="intro">
+            <header class="major">
+                <h2>Hello, I am Vijay</h2>
+            </header>
+            <div style="font-size:1.3em;font-weight:bolder;margin-bottom:1em;line-height:1.5em;height:3em;">This is my personal website</div>
+            <p>I'm a sophomore at IIITDM Kancheepuram.
+                <br /> I love free and open source software and algorithmic programming.
+                <br /> I occassionally blog. Check it out out <a>here</a>.
+                <br /> Let's talk! <a href="mailto:me@vijayraghavan.net">Email me</a> </p>
+        </section>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="assets/js/skel.min.js"></script>
+        <script src="assets/js/main.js"></script>
 
 
-              <a class="fa fa-github-square" target="_blank" href="http://github.com/daj0ker"></a>
-
-              <a class="fa fa-linkedin-square" target="_blank" href="http://lnked.in/vijay-raghavan"></a>
-
-            </div>
-            <div class="col-md-3 col-xs-3"></div>
-          </div>
-        </div>
-      </section>
     </div>
-  </body>
+
+</body>
 
 </html>
