--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </header>
             <div style="font-size:1.3em;font-weight:bolder;margin-bottom:1em;line-height:1.5em;height:3em;">This is my personal website</div>
             <p>I'm a sophomore at IIITDM Kancheepuram.
-                <br /> I love free and open source software and algorithmic programming.
+                <br /> I love free and open source software and coding.
                 <br /> I occassionally blog. Check it out out <a>here</a>.
                 <br /> Let's talk! <a href="mailto:me@vijayraghavan.net">Email me</a> </p>
         </section>
