--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                 <h2>Hello, I am Vijay</h2>
             </header>
             <div style="font-size:1.3em;font-weight:bolder;margin-bottom:1em;line-height:1.5em;height:3em;">This is my personal website</div>
-            <p>I'm a sophomore at IIITDM Kancheepuram.
-                <br /> I ♥ to code.
+            <p>I'm a sophomore at IIITDM Kancheepuram and I ♥ to code .
                 <br /> I occassionally blog. Check it out out <a>here</a>.
         </section>
 
