--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <ul class="icons" align="center">
 
                 <li><a href="https://github.com/daj0ker" class="icon fa-github-square"><span class="label">GitHub</span></a></li>
-                <li><a href="https://in.linkedin.com/in/vijay97" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://in.linkedin.com/in/vijayraghavans" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
                 <li><a href="mailto:me@vijayraghavan.net" class="icon fa-envelope-square"><span class="label">Email</span></a></li>
             </ul>
         </nav>
@@ -83,8 +83,8 @@
                 <h2>Hello, I am Vijay</h2>
             </header>
             <div style="font-size:1.3em;font-weight:bolder;margin-bottom:1em;line-height:1.5em;height:3em;">This is my personal website</div>
-            <p>I'm a sophomore at IIITDM Kancheepuram and I ♥ to code .
-                <br /> I occassionally blog. Check it out out <a>here</a>.
+            <p>I'm a junior undergraduate at IIITDM Kancheepuram.
+                
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
